--- a/index.html
+++ b/index.html
@@ -16,29 +16,34 @@
 <body>
   <main>
     <h1 class="sr-only">Time Tracking Dashboard</h1>
-    <div class="user-interface">
-      <div class="user">
+    <div class="user-interface card">
+      <div class="user card">
         <img src="images/image-jeremy.png" alt="Profile image of Jeremy" class="user-img">
-        <p>Report for</p>
-        <h2 class="user-name">Jeremy Robson</h2>
+        <div class="user-info">
+          <p class="report-title">Report for</p>
+          <h2 class="user-name">Jeremy Robson</h2>
+        </div>
       </div>
       <div class="stat-switch">
         <a class="daily" href="#">Daily</a>
-        <a class="weekly" href="#">Weekly</a>
+        <a class="weekly" href="#" data-active="true">Weekly</a>
         <a class="monthly" href="#">Monthly</a>
       </div>
     </div>
-    <div class="stat work">
-      <div class="stat-title">
-        Work
-        <img src="images/icon-ellipsis.svg" alt="ellipsis icon">
-      </div>
-      <div class="stat-data-wrapper">
-        <div class="stat-total-data">32hrs</div>
-        <p class="stat-overview">Previous - 36hrs</p>
+    <div class="card-wrapper work">
+      <div class="card-bg"></div>
+      <div class="stat card">
+        <div class="stat-title">
+          Work
+          <img src="images/icon-ellipsis.svg" alt="ellipsis icon">
+        </div>
+        <div class="stat-data-wrapper">
+          <div class="stat-total-data">32hrs</div>
+          <p class="stat-overview">Previous - 36hrs</p>
+        </div>
       </div>
     </div>
-    <div class="stat play">
+    <div class="stat play card">
       <div class="stat-title">
         Play
         <img src="images/icon-ellipsis.svg" alt="ellipsis icon">
@@ -48,7 +53,7 @@
         <p class="stat-overview">Previous - 8hrs</p>
       </div>
     </div>
-    <div class="stat study">
+    <div class="stat study card">
       <div class="stat-title">
         Study
         <img src="images/icon-ellipsis.svg" alt="ellipsis icon">
@@ -58,7 +63,7 @@
         <p class="stat-overview">Previous - 7hrs</p>
       </div>
     </div>
-    <div class="stat exercise">
+    <div class="stat exercise card">
       <div class="stat-title">
         Exercise
         <img src="images/icon-ellipsis.svg" alt="ellipsis icon">
@@ -68,7 +73,7 @@
         <p class="stat-overview">Previous - 5hrs</p>
       </div>
     </div>
-    <div class="stat social">
+    <div class="stat social card">
       <div class="stat-title">
         Social
         <img src="images/icon-ellipsis.svg" alt="ellipsis icon">
@@ -78,7 +83,7 @@
         <p class="stat-overview">Previous - 10hrs</p>
       </div>
     </div>
-    <div class="stat self-care">
+    <div class="stat self-care card">
       <div class="stat-title">
         Self Care
         <img src="images/icon-ellipsis.svg" alt="ellipsis icon">
