Styled cards and added hover effects for elements

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
       </div>
     </div>
     <div class="card-wrapper work">
-      <div class="card-bg"></div>
       <div class="stat card">
         <div class="stat-title">
           Work
@@ -43,54 +42,64 @@
         </div>
       </div>
     </div>
-    <div class="stat play card">
-      <div class="stat-title">
-        Play
-        <img src="images/icon-ellipsis.svg" alt="ellipsis icon">
-      </div>
-      <div class="stat-data-wrapper">
-        <div class="stat-total-data">10hrs</div>
-        <p class="stat-overview">Previous - 8hrs</p>
-      </div>
-    </div>
-    <div class="stat study card">
-      <div class="stat-title">
-        Study
-        <img src="images/icon-ellipsis.svg" alt="ellipsis icon">
-      </div>
-      <div class="stat-data-wrapper">
-        <div class="stat-total-data">4hrs</div>
-        <p class="stat-overview">Previous - 7hrs</p>
+    <div class="card-wrapper play">
+      <div class="stat card">
+        <div class="stat-title">
+          Play
+          <img src="images/icon-ellipsis.svg" alt="ellipsis icon">
+        </div>
+        <div class="stat-data-wrapper">
+          <div class="stat-total-data">10hrs</div>
+          <p class="stat-overview">Previous - 8hrs</p>
+        </div>
       </div>
     </div>
-    <div class="stat exercise card">
-      <div class="stat-title">
-        Exercise
-        <img src="images/icon-ellipsis.svg" alt="ellipsis icon">
-      </div>
-      <div class="stat-data-wrapper">
-        <div class="stat-total-data">4hrs</div>
-        <p class="stat-overview">Previous - 5hrs</p>
-      </div>
-    </div>
-    <div class="stat social card">
-      <div class="stat-title">
-        Social
-        <img src="images/icon-ellipsis.svg" alt="ellipsis icon">
-      </div>
-      <div class="stat-data-wrapper">
-        <div class="stat-total-data">5hrs</div>
-        <p class="stat-overview">Previous - 10hrs</p>
+    <div class="card-wrapper study">
+      <div class="stat card">
+        <div class="stat-title">
+          Study
+          <img src="images/icon-ellipsis.svg" alt="ellipsis icon">
+        </div>
+        <div class="stat-data-wrapper">
+          <div class="stat-total-data">4hrs</div>
+          <p class="stat-overview">Previous - 7hrs</p>
+        </div>
       </div>
     </div>
-    <div class="stat self-care card">
-      <div class="stat-title">
-        Self Care
-        <img src="images/icon-ellipsis.svg" alt="ellipsis icon">
+    <div class="card-wrapper exercise">
+      <div class="stat card">
+        <div class="stat-title">
+          Exercise
+          <img src="images/icon-ellipsis.svg" alt="ellipsis icon">
+        </div>
+        <div class="stat-data-wrapper">
+          <div class="stat-total-data">4hrs</div>
+          <p class="stat-overview">Previous - 5hrs</p>
+        </div>
       </div>
-      <div class="stat-data-wrapper">
-        <div class="stat-total-data">2hrs</div>
-        <p class="stat-overview">Previous - 2hrs</p>
+    </div>
+    <div class="card-wrapper social">
+      <div class="stat card">
+        <div class="stat-title">
+          Social
+          <img src="images/icon-ellipsis.svg" alt="ellipsis icon">
+        </div>
+        <div class="stat-data-wrapper">
+          <div class="stat-total-data">5hrs</div>
+          <p class="stat-overview">Previous - 10hrs</p>
+        </div>
+      </div>
+    </div>
+    <div class="card-wrapper self-care">
+      <div class="stat card">
+        <div class="stat-title">
+          Self Care
+          <img src="images/icon-ellipsis.svg" alt="ellipsis icon">
+        </div>
+        <div class="stat-data-wrapper">
+          <div class="stat-total-data">2hrs</div>
+          <p class="stat-overview">Previous - 2hrs</p>
+        </div>
       </div>
     </div>
   </main>
