Read from JSON and set data. Added functionality to select overview period and set data for that period

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </div>
       </div>
       <div class="stat-switch">
-        <a class="daily" href="#">Daily</a>
-        <a class="weekly" href="#" data-active="true">Weekly</a>
-        <a class="monthly" href="#">Monthly</a>
+        <a class="daily" data-overview="daily">Daily</a>
+        <a class="weekly" data-active="true" data-overview="weekly">Weekly</a>
+        <a class="monthly" data-overview="monthly">Monthly</a>
       </div>
     </div>
     <div class="card-wrapper work">
@@ -37,8 +37,8 @@
           <img src="images/icon-ellipsis.svg" alt="ellipsis icon">
         </div>
         <div class="stat-data-wrapper">
-          <div class="stat-total-data">32hrs</div>
-          <p class="stat-overview">Previous - 36hrs</p>
+          <div class="stat-total-data"></div>
+          <p class="stat-overview"></p>
         </div>
       </div>
     </div>
@@ -49,8 +49,8 @@
           <img src="images/icon-ellipsis.svg" alt="ellipsis icon">
         </div>
         <div class="stat-data-wrapper">
-          <div class="stat-total-data">10hrs</div>
-          <p class="stat-overview">Previous - 8hrs</p>
+          <div class="stat-total-data"></div>
+          <p class="stat-overview"></p>
         </div>
       </div>
     </div>
@@ -61,8 +61,8 @@
           <img src="images/icon-ellipsis.svg" alt="ellipsis icon">
         </div>
         <div class="stat-data-wrapper">
-          <div class="stat-total-data">4hrs</div>
-          <p class="stat-overview">Previous - 7hrs</p>
+          <div class="stat-total-data"></div>
+          <p class="stat-overview"></p>
         </div>
       </div>
     </div>
@@ -73,8 +73,8 @@
           <img src="images/icon-ellipsis.svg" alt="ellipsis icon">
         </div>
         <div class="stat-data-wrapper">
-          <div class="stat-total-data">4hrs</div>
-          <p class="stat-overview">Previous - 5hrs</p>
+          <div class="stat-total-data"></div>
+          <p class="stat-overview"></p>
         </div>
       </div>
     </div>
@@ -85,8 +85,8 @@
           <img src="images/icon-ellipsis.svg" alt="ellipsis icon">
         </div>
         <div class="stat-data-wrapper">
-          <div class="stat-total-data">5hrs</div>
-          <p class="stat-overview">Previous - 10hrs</p>
+          <div class="stat-total-data"></div>
+          <p class="stat-overview"></p>
         </div>
       </div>
     </div>
@@ -97,8 +97,8 @@
           <img src="images/icon-ellipsis.svg" alt="ellipsis icon">
         </div>
         <div class="stat-data-wrapper">
-          <div class="stat-total-data">2hrs</div>
-          <p class="stat-overview">Previous - 2hrs</p>
+          <div class="stat-total-data"></div>
+          <p class="stat-overview"></p>
         </div>
       </div>
     </div>
